--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,11 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    {
-      "name": "Connect to server",
-      "type": "go",
-      "request": "attach",
-      "mode": "debug",
-      "remotePath": "${workspaceFolder}/src",
-      "port": 2345,
-      "host": "127.0.0.1"
-    }
+      {
+          "name": "Launch Package",
+          "type": "go",
+          "request": "launch",
+          "program": "${workspaceFolder}/src/main.go"
+      } 
   ]
 }
