--- a/src/gqlgen.yml
+++ b/src/gqlgen.yml
@@ -22,6 +22,11 @@ resolver:
   layout: follow-schema
   dir: graph
   package: graph
+  models:
+  User:
+    fields:
+      friends:
+        resolver: true # force a resolver to be generated
 
 # Optional: turn on use ` + "`" + `gqlgen:"fieldName"` + "`" + ` tags in your models
 # struct_tag: json
@@ -42,7 +47,7 @@ resolver:
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 autobind:
-#  - "assignment/graphql/graph/model"
+#  - "assignment/src/graph/model"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
