--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 *.DS_Store
 .AppleDouble
 .LSOverride
-.vscode
+# .vscode
 # Icon must end with two \r
 Icon
 
@@ -86,16 +86,16 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-*.env
+# *.env
 
 
 ### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history
+# .vscode/*
+# !.vscode/settings.json
+# !.vscode/tasks.json
+# !.vscode/launch.json
+# !.vscode/extensions.json
+# .history
 
 ### Others
 tmp*
