--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -1,10 +1,10 @@
 # Where are all the schema files located? globs are supported eg  src/**/*.graphqls
 schema:
-  - internal/graph/*.graphqls
+  - internal/graph/schema/*.graphqls
 
 # Where should the generated server code go?
 exec:
-  filename: internal/graph/generated.go
+  filename: internal/graph/generate/generated.go
   package: graph
 
 # Uncomment to enable federation
@@ -14,15 +14,15 @@ exec:
 
 # Where should any generated models go?
 model:
-  filename: internal/graph/model/models_gen.go
+  filename: internal/graph/model/generated.go
   package: model
 
 # Where should the resolver implementations go?
 resolver:
-  layout: follow-schema
-  dir: graph
+  # layout: follow-schema
+  filename: internal/graph/resolver/resolver.go
   package: graph
-  filename_template: "{name}.resolvers.go"
+  # filename_template: "{name}.resolvers.go"
   # Optional: turn on to not generate template comments above resolvers
   # omit_template_comment: false
 
