--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -19,8 +19,9 @@ model:
 
 # Where should the resolver implementations go?
 resolver:
-  # layout: follow-schema
-  filename: internal/graph/resolver/resolver.go
+  layout: follow-schema
+  dir: internal/graph/resolver
+  # filename: internal/graph/resolver/resolver.go
   package: graph
   filename_template: "{name}.resolvers.go"
   # Optional: turn on to not generate template comments above resolvers
@@ -65,8 +66,8 @@ resolver:
 
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
-autobind:
-#  - "assignment/internal/graphql/graph/model"
+# autobind:
+#  - "assignment/internal/graph/model"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
@@ -85,3 +86,7 @@ models:
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
       - github.com/99designs/gqlgen/graphql.Int32
+  Todo:
+    fields:
+      user:
+        resolver: true
